# shellcursive

./: .pre-commit-config.yaml  README.md  pyproject.toml  run
shellcursive/: cli.py  core.py
